--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -15,6 +15,15 @@ jobs:
     steps:
       - name: Print names
         run: echo ${{ matrix.python-version }}
-
+  job-two:
+    needs: job-one
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ${{ fromJSON(needs.job-one.matrix.os) }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Echo More stuff
+        run: echo ${{ matrix.python-version }}
 #        repos: [ { org: "NSLS-II-CSX", repo: "profile_collection", branch: "master", profile_branch: "qserver", beamline_acronym: "csx" },
 #                 { org: "NSLS-II-SRX", repo: "profile_collection", branch: "master", profile_branch: "master", beamline_acronym: "srx" } ]
