--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ${{ fromJSON(needs.job-one.matrix.os) }}
+        python-version: ${{ needs.job-one.matrix.os }}
     runs-on: ubuntu-latest
     steps:
       - name: Echo More stuff
