--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -1,32 +1,41 @@
 name: Test Workflow
 
 on:
-  workflow_dispatch:
   push:
-    branches: [ "main" ]
+  workflow_dispatch:
+
 jobs:
-  job-one:
-    outputs:
-      shared-python-versions: $
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ ubuntu-latest ]
-        python-version: ["3.10", "3.11", "3.12"]
-    runs-on: ${{ matrix.os }}
-    steps:
-      - name: Print names
-        id: shared-python-versions
-        run: |
-          echo 'shared-python-versions=["3.10", "3.11", "3.12"]' >> "$GITHUB_OUTPUT"
-  job-two:
-    needs: job-one
-    strategy:
-      matrix:
-        shared-python-versions: ${{ fromJSON(needs.job-one.outputs.shared-python-versions) }}
+  define-matrix:
     runs-on: ubuntu-latest
+
+    outputs:
+      colors: $
+
     steps:
-      - name: Echo More stuff
-        run: echo ${{ matrix.python-version }}
+      - name: Define Colors
+        id: colors
+        run: |
+          echo 'colors=["red", "green", "blue"]' >> "$GITHUB_OUTPUT"
+
+  produce-artifacts:
+    runs-on: ubuntu-latest
+    needs: define-matrix
+    strategy:
+      matrix:
+
+        color: ${{ fromJSON(needs.define-matrix.outputs.colors) }}
+
+    steps:
+      - name: Define Color
+        env:
+          color: $
+        run: |
+          echo "$color" > color
+      - name: Produce Artifact
+        uses: actions/upload-artifact@v4
+
+        with:
+          name: ${{ matrix.color }}
+          path: color
 #        repos: [ { org: "NSLS-II-CSX", repo: "profile_collection", branch: "master", profile_branch: "qserver", beamline_acronym: "csx" },
 #                 { org: "NSLS-II-SRX", repo: "profile_collection", branch: "master", profile_branch: "master", beamline_acronym: "srx" } ]
