--- a/.github/workflows/common_workflow.yml
+++ b/.github/workflows/common_workflow.yml
@@ -3,7 +3,7 @@ name: Common Workflow
 on:
   workflow_call:
     inputs:
-      python-version: # the variable you can use in place of a matrix
+      version: # the variable you can use in place of a matrix
         required: true
         type: number
 
@@ -11,10 +11,10 @@ jobs:
   job1:
     runs-on: ubuntu-latest
     steps:
-      - run: echo 'job1 version ${{ inputs.python-version }}'
+      - run: echo 'job1 version ${{ inputs.version }}'
 
   job2:
     runs-on: ubuntu-latest
     needs: job1
     steps:
-      - run: echo 'job2 version ${{ inputs.python-version }}'
+      - run: echo 'job2 version ${{ inputs.version }}'
