--- a/.github/workflows/master_workflow.yml
+++ b/.github/workflows/master_workflow.yml
@@ -13,4 +13,4 @@ jobs:
         python-version: [3.10, 3.11, 3.12]
     uses: ./.github/workflows/common_workflow.yml # calls the one above ^
     with:
-      version: ${{ matrix.python-version }}
+      s-version: ${{ matrix.python-version }}
