--- a/.github/workflows/common_workflow.yml
+++ b/.github/workflows/common_workflow.yml
@@ -14,7 +14,12 @@ jobs:
       - run: echo 'job1 version ${{ inputs.version }}'
 
   job2:
+    strategy:
+      fail-fast: false
+      matrix:
+        repos: [ { org: "NSLS-II-CSX", repo: "profile_collection", branch: "master", profile_branch: "qserver", beamline_acronym: "csx" },
+                 { org: "NSLS-II-SRX", repo: "profile_collection", branch: "master", profile_branch: "master", beamline_acronym: "srx" } ]
     runs-on: ubuntu-latest
     needs: job1
     steps:
-      - run: echo 'job2 version ${{ inputs.version }}'
+      - run: echo 'job2 version ${{ inputs.version }} and ${{matrix.repos.org}}'
