inhereted matrix with a workflow matrix

--- a/.github/workflows/master_workflow.yml
+++ b/.github/workflows/master_workflow.yml
@@ -14,3 +14,4 @@ jobs:
     uses: ./.github/workflows/common_workflow.yml # calls the one above ^
     with:
       version: ${{ matrix.python-version }}
+    secrets: inherit
