inhereted matrix with a workflow matrix

--- a/.github/workflows/master_workflow.yml
+++ b/.github/workflows/master_workflow.yml
@@ -13,6 +13,8 @@ jobs:
         python-version: [3.10, 3.11, 3.12]
     runs-on: ubuntu-latest
     steps:
+      - name: checkout repo
+        uses: actions/checkout@v4
       - name: run other workflow
         uses: ./.github/workflows/common_workflow.yml # calls the one above ^
         with:
