--- a/.github/workflows/master_workflow.yml
+++ b/.github/workflows/master_workflow.yml
@@ -13,8 +13,12 @@ jobs:
         python-version: [3.10, 3.11, 3.12]
     runs-on: ubuntu-latest
     steps:
-      - name: checkout repo
+      - name: Checkout Repo
         uses: actions/checkout@v4
+      - name: confirm files
+        run: |
+          pwd
+          ls -a
       - name: run other workflow
         uses: ./.github/workflows/common_workflow.yml # calls the one above ^
         with:
