inhereted matrix with a workflow matrix

--- a/.github/workflows/master_workflow.yml
+++ b/.github/workflows/master_workflow.yml
@@ -19,6 +19,7 @@ jobs:
         run: |
           pwd
           ls -a
+          ls .github/workflows
       - name: run other workflow
         uses: ./.github/workflows/common_workflow.yml # calls the one above ^
         with:
