--- a/.github/workflows/master_workflow.yml
+++ b/.github/workflows/master_workflow.yml
@@ -11,24 +11,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.10, 3.11, 3.12]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v4
-      - name: confirm files
-        run: |
-          pwd
-          ls -a
-          ls .github/workflows
-      - name: run other workflow
-        run: |
-          chmod u+x .github/workflows/common_workflow.yml
-          ./.github/workflows/common_workflow.yml ${{ matrix.python-version }}
+    uses: ./.github/workflows/common_workflow.yml
+    with:
+      version: ${{ matrix.python-version }}
 
-
-#    uses: ./.github/workflows/common_workflow.yml # calls the one above ^
-#    with:
-#      version:
-#  artifact-setup:
-#    needs: version-matrix
-#    runs-on: ubuntu-latest
