--- a/.github/workflows/common_workflow.yml
+++ b/.github/workflows/common_workflow.yml
@@ -29,3 +29,5 @@ jobs:
     needs: job1
     steps:
       - run: echo 'job2 version ${{ inputs.version }} and ${{matrix.repos.org}}'
+
+# something
