--- a/.github/workflows/master_workflow.yml
+++ b/.github/workflows/master_workflow.yml
@@ -11,7 +11,6 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.10, 3.11, 3.12]
-    uses: ./.github/workflows/common_workflow.yml
+    uses: ./.github/workflows/common_workflow.yml # calls the one above ^
     with:
       version: ${{ matrix.python-version }}
-
