--- a/.github/workflows/master_workflow.yml
+++ b/.github/workflows/master_workflow.yml
@@ -10,7 +10,7 @@ jobs:
       # fail-fast is true by default
       fail-fast: false
       matrix:
-        python-version: [3.10, 3.11, 3.12]
+        python-version: ['3.10', '3.11', '3.12']
     uses: ./.github/workflows/common_workflow.yml # calls the one above ^
     with:
       version: ${{ matrix.python-version }}
