--- a/.github/workflows/common_workflow.yml
+++ b/.github/workflows/common_workflow.yml
@@ -32,7 +32,7 @@ jobs:
 #        repos: [ { org: "NSLS-II-CSX", repo: "profile_collection", branch: "master", profile_branch: "qserver", beamline_acronym: "csx" },
 #                 { org: "NSLS-II-SRX", repo: "profile_collection", branch: "master", profile_branch: "master", beamline_acronym: "srx" } ]
     runs-on: ubuntu-latest
-    needs: job0
+    needs: [job0]
     steps:
       - run: echo "${{ needs.job0.outputs.some-thing}}"
 #      - run: echo 'job1 version ${{ inputs.version }} and ${{matrix.repos.org}}'
