--- a/.github/workflows/master_workflow.yml
+++ b/.github/workflows/master_workflow.yml
@@ -1,7 +1,8 @@
 name: Master Workflow
 
 on:
-  push:
+  workflow_dispatch:
+#  push:
 
 jobs:
   version-matrix:
@@ -11,6 +12,6 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ['3.10', '3.11', '3.12']
-    uses: ./.github/workflows/common_workflow.yml # calls the one above ^
+    uses: ./.github/workflows/common_workflowv2.yml # calls the one above ^
     with:
       version: ${{ matrix.python-version }}
