passing matrix through json

--- a/.github/workflows/common_workflowv2.yml
+++ b/.github/workflows/common_workflowv2.yml
@@ -18,6 +18,10 @@ jobs:
         repos:
           - beamline: srx
             conclusion: na
+    steps:
+      - run: |
+          echo ${{ matrix.beamline }}
+          echo ${{ matrix.conclusion }}
     #${{ steps.otpt-something.SOMETHING }}
 #    steps:
 #      - name: Put thing into env var
