--- a/.github/workflows/common_workflowv2.yml
+++ b/.github/workflows/common_workflowv2.yml
@@ -11,7 +11,7 @@ jobs:
   job0:
     name: ${{matrix.repos.beamline}}
     outputs:
-      job0-id: ${{ job0.container.id }}
+      job0-id: ${{ container.id }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
