--- a/.github/workflows/common_workflowv2.yml
+++ b/.github/workflows/common_workflowv2.yml
@@ -10,8 +10,6 @@ on:
 jobs:
   job0:
     name: ${{matrix.repos.beamline}}
-    outputs:
-      job0-id: ${{ github.job.container.id }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -21,10 +19,11 @@ jobs:
           - beamline: csx
             conclusion: success
     steps:
-      - run: |
-          echo ${{ matrix.repos.beamline }}
-          echo ${{ matrix.repos.conclusion }}
-
+#      - run: |
+#          echo ${{ matrix.repos.beamline }}
+#          echo ${{ matrix.repos.conclusion }}
+      - name: Adding markdown
+        run: echo '### Hello world!' >> $GITHUB_STEP_SUMMARY
 #    steps:
 #      - name: Put thing into env var
 #        run: |
@@ -43,18 +42,18 @@ jobs:
 #          name: ${{ inputs.version }}
 #          path: ${{ inputs.version }}.txt
 
-  job1:
+#  job1:
 #    strategy:
 #      fail-fast: false
 #      matrix:
 #        repos: [ { org: "NSLS-II-CSX", repo: "profile_collection", branch: "master", profile_branch: "qserver", beamline_acronym: "csx" },
 #                 { org: "NSLS-II-SRX", repo: "profile_collection", branch: "master", profile_branch: "master", beamline_acronym: "srx" } ]
-    runs-on: ubuntu-latest
-    needs: job0
-    steps:
-      - run: |
-          echo "${{needs.job0.result}}"
-          echo "${{needs.job0.outputs.job0-id}}"
+#    runs-on: ubuntu-latest
+#    needs: job0
+#    steps:
+#      - run: |
+#          echo "${{needs.job0.result}}"
+#          echo "${{needs.job0.outputs.job0-id}}"
 
 #      - run: echo 'job1 version ${{ inputs.version }} and ${{matrix.repos.org}}'
 #      - name: Downloading Conda Artifact
