--- a/.github/workflows/common_workflowv2.yml
+++ b/.github/workflows/common_workflowv2.yml
@@ -11,8 +11,10 @@ jobs:
     outputs:
       matrix: ${{ steps.set-matrix.outputs.test_matrix }}
     steps:
-      - id: set-matrix
-        run: echo "test_matrix={\"include\":[{\"project\":\"foo\",\"config\":\"Debug\"},{\"project\":\"bar\",\"config\":\"Release\"}]}" >> $GITHUB_OUTPUT
+      - name: buffer step
+        run: echo "buffer"
+      - name: Purpouseful error
+        run: exit 1
   job2:
     needs: job1
     runs-on: ubuntu-latest
