--- a/.github/workflows/zenodo_upload.yml
+++ b/.github/workflows/zenodo_upload.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
-        uses: action/checkout@v4
+        uses: actions/checkout@v4
       - name: Install Python
         uses: actions/setup-python@v5
         with:
