passing array from one job to another

--- a/.github/workflows/matrix_json.yml
+++ b/.github/workflows/matrix_json.yml
@@ -8,7 +8,7 @@ jobs:
   job1:
     runs-on: ubuntu-latest
     outputs:
-      test_matrix: toJson(["1", "2", "3"])
+      test_matrix: ["1", "2", "3"]
     steps:
       - run: echo "buffer step"
   job2:
