passing array from one job to another

--- a/.github/workflows/matrix_json.yml
+++ b/.github/workflows/matrix_json.yml
@@ -8,11 +8,14 @@ jobs:
   job1:
     runs-on: ubuntu-latest
     outputs:
-      test_matrix: ["1", "2", "3"]
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
-      - run: echo "buffer step"
+      - id: set-matrix
+        run: echo "matrix={\"include\":[{\"project\":\"foo\",\"config\":\"Debug\"},{\"project\":\"bar\",\"config\":\"Release\"}]}" >> $GITHUB_OUTPUT
   job2:
     needs: job1
     runs-on: ubuntu-latest
+    strategy:
+      matrix: ${{ fromJSON(needs.job1.outputs.matrix) }}
     steps:
-      - run: echo "${{ needs.job1.outputs.test_matrix }}"
+      - run: echo "Matrix - Project ${{ matrix.project }}, Config ${{ matrix.config }}"
