--- a/.github/workflows/matrix_json.yml
+++ b/.github/workflows/matrix_json.yml
@@ -11,7 +11,7 @@ jobs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
       - id: set-matrix
-        run: echo "matrix={\"include\":[{\"project\":\"foo\":\"test\"},{\"project\":\"bar\"}" >> $GITHUB_OUTPUT
+        run: echo "matrix={\"include\":[{\"project\":\"- foo:\"test"\"},{\"project\":\"bar\"}" >> $GITHUB_OUTPUT
   job2:
     needs: job1
     runs-on: ubuntu-latest
