--- a/.github/workflows/matrix_json.yml
+++ b/.github/workflows/matrix_json.yml
@@ -11,7 +11,8 @@ jobs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
       - id: set-matrix
-        run: echo "matrix={\"include\":[{\"repos\":{\"name\":\"csx\",\"org\":\"NSLS-II-CSX\",\"acronym\":csx}},{\"repos\":{\"name\":\"srx\",\"org\":\"NSLS-II-SRX\",\"acronym\":srx}}]}" >> $GITHUB_OUTPUT
+#        run: echo "matrix={\"include\":[{\"repos\":{\"name\":\"csx\",\"org\":\"NSLS-II-CSX\",\"acronym\":csx}},{\"repos\":{\"name\":\"srx\",\"org\":\"NSLS-II-SRX\",\"acronym\":srx}}]}" >> $GITHUB_OUTPUT
+        run: echo "matrix={\"include\":[{\"repos\":{\"name\":\"foo\",\"a\":1,\"b\":2}},{\"repos\":{\"name\":\"bar\",\"a\":3,\"b\":4}}]}"
   job2:
     needs: job1
     runs-on: ubuntu-latest
@@ -19,7 +20,8 @@ jobs:
       matrix: ${{ fromJSON(needs.job1.outputs.matrix) }}
     steps:
       - run: |
-          echo "Matrix - Project ${{ matrix.repos.org }}"
-          echo "Matrix - Project ${{ matrix.repos.name }}"
-          echo "Matrix - Project ${{ matrix.repos.acronym }}"
+          echo "Matrix - Project ${{ matrix.repos.a }}"
+          echo "Matrix - Project ${{ matrix.repos.b }}"
+#          echo "Matrix - Project ${{ matrix.repos.name }}"
+#          echo "Matrix - Project ${{ matrix.repos.acronym }}"
 
