--- a/.github/workflows/matrix_json.yml
+++ b/.github/workflows/matrix_json.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           python3 yml_to_string.py
           echo $LINK_STR
-          echo "matrix={"include":[{"repos":{"name":"csx","org":"NSLS-II-CSX","acronym":csx}},{"repos":{"name":"srx","org":"NSLS-II-SRX","acronym":srx}}]}" >> $GITHUB_OUTPUT
+          echo "matrix={\"include\":[{\"project\":{\"name\":\"foo\",\"a\":1,\"b\":2}},{\"project\":{\"name\":\"bar\",\"a\":3,\"b\":4}}]}" >> $GITHUB_OUTPUT
 
 #          echo "matrix={${LINK_STR}}" >> $GITHUB_OUTPUT
   job2:
