--- a/.github/workflows/matrix_json.yml
+++ b/.github/workflows/matrix_json.yml
@@ -24,8 +24,8 @@ jobs:
         run: |
           python3 yml_to_string.py
           echo $LINK_STR
-          TEST_STR = ""include":[{"project":{"name":"foo","a":1,"b":2}},{"project":{"name":"bar","a":3,"b":4}}]}"
-          echo "matrix={$TEST_STR" >> $GITHUB_OUTPUT
+          TEST_STR = '"include":[{"repos":{"name":"csx","org":"NSLS-II-CSX","acronym":csx}},{"repos":{"name":"srx","org":"NSLS-II-SRX","acronym":srx}}]'
+          echo "matrix={$TEST_STR}" >> $GITHUB_OUTPUT
 
 #          echo "matrix={${LINK_STR}}" >> $GITHUB_OUTPUT
   job2:
