--- a/.github/workflows/matrix_json.yml
+++ b/.github/workflows/matrix_json.yml
@@ -25,7 +25,7 @@ jobs:
           python3 yml_to_string.py
           echo $LINK_STR
           TEST_STR = '"include":[{"repos":{"name":"csx","org":"NSLS-II-CSX","acronym":csx}},{"repos":{"name":"srx","org":"NSLS-II-SRX","acronym":srx}}]'
-          echo "matrix={$TEST_STR}" >> $GITHUB_OUTPUT
+          echo "matrix={${TEST_STR}}" >> $GITHUB_OUTPUT
 
 #          echo "matrix={${LINK_STR}}" >> $GITHUB_OUTPUT
   job2:
