--- a/.github/workflows/using_test_action.yml
+++ b/.github/workflows/using_test_action.yml
@@ -9,6 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Test out test-action
-        uses: actions/sy-test-action@v1
+        uses: StaticYolt/sy-test-action@v1
         with:
           python-version: ${{ inputs.version }}
