--- a/.github/workflows/using_test_action.yml
+++ b/.github/workflows/using_test_action.yml
@@ -9,8 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Test out test-action
-        uses: StaticYolt/testing-conda-environment@v1.0.2
+        uses: StaticYolt/testing-conda-environment@v1.0.4
         with:
+          run-id: "9991543724"
           test-conda-packed-name: "2024-2.1-py310-tiled"
           org: "NSLS-II-CSX"
           repo: "profile_collections"
